--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mtaku3/RDBGrid/issues"
   },
-  "homepage": "https://github.com/mtaku3/RDBGrid#readme"
+  "homepage": "https://github.com/mtaku3/RDBGrid#readme",
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  }
 }
