--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "rdbgrid",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "tsup src/index.ts --format esm,cjs,iife --minify --sourcemap"
   },
   "lint-staged": {
     "**/*.ts": "eslint",
@@ -29,6 +30,7 @@
     "husky": "^9.0.7",
     "lint-staged": "^15.2.0",
     "prettier": "3.2.4",
+    "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   }
 }
