--- a/package.json
+++ b/package.json
@@ -6,11 +6,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
-    "build": "tsup src/index.ts --format esm,cjs,iife --minify --sourcemap"
+    "build": "tsup"
   },
   "lint-staged": {
     "**/*.ts": "eslint",
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "tsup": {
+    "entry": [
+      "src/index.ts"
+    ],
+    "format": [
+      "esm",
+      "cjs",
+      "iife"
+    ],
+    "minify": true,
+    "sourcemap": true,
+    "clean": true,
+    "noExternal": [
+      "lodash-es"
+    ]
   },
   "repository": {
     "type": "git",
@@ -32,5 +48,9 @@
     "prettier": "3.2.4",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "lodash-es": "^4.17.21"
   }
 }
